<resources>
    <string name="app_name">EVergo</string>
    <string name="str_wait">Please wait…</string>
    <string name="str_no_connected_to_internet">Connect the network and try again</string>
    <string name="energo_check_camera_permissions">Check application permissions for Camera</string>
    <string name="energo_check_read_external_storage_permissions">Check application permissions to Read External Storage</string>
    <string name="energo_check_write_external_storage_permissions">Check application permissions to Write External Storage</string>
    <string name="energo_see_all">See All</string>
    <string name="energo_undefined_name">Undefined</string>
    <string name="energo_default_energy_balance" translatable="false">0.00</string>
    <string name="energo_default_currency_balance" translatable="false">0.00</string>
    <string name="energo_default_energy_price_balance" translatable="false">0.000</string>
    <string name="energo_currency_format" translatable="false">%1$.2f</string>
    <string name="energo_energy_format" translatable="false">%1$.2f</string>
    <string name="energo_price_format" translatable="false">%1$.3f</string>
    <string name="energo_content_description_icon" translatable="false">Icon</string>
    <string name="energo_content_description_avatar" translatable="false">Avatar</string>
    <string name="energo_content_description_background" translatable="false">Background</string>
    <string name="energo_main_menu_map">Map</string>
    <string name="energo_main_menu_storage">Storage</string>
    <string name="energo_main_menu_wallet">Wallet</string>
    <string name="energo_main_menu_transactions">Transactions</string>
    <string name="energo_main_menu_settings">Settings</string>
    <string name="energo_main_energy_balance">Energy Balance</string>
    <string name="energo_main_energy_best_price">Best Price</string>
    <string name="energo_main_creation">Creation</string>
    <string name="energo_main_usage">Usage</string>
    <string name="energo_main_market">Market</string>
    <string name="energo_main_wallet">Wallet</string>
    <string name="energo_main_bill">Bill</string>
    <string name="energo_main_ledger">Ledger</string>
    <string name="energo_main_devices">Devices</string>
    <string name="energo_main_market_agent">Market Agent</string>
    <string name="energo_main_order_type_buy">Buy</string>
    <string name="energo_main_order_type_sell">Sell</string>
    <string name="energo_main_order_percentage" translatable="false">%1$d%%</string>
    <string name="energo_main_order_price" translatable="false">%1$.2f PHP</string>
    <string name="energo_energy_wallet_add_energy">Added %1$.3f KWh to your balance</string>
    <string name="energo_energy_wallet_removed_energy">Removed %1$.3f KWh to your balance</string>
    <string name="energo_country_selector_title">Countries</string>
    <string name="energo_phone_code_get_code">Get Code</string>
    <string name="energo_phone_code_header">Input Verification Code</string>
    <string name="energo_phone_code_hint">i.e. 123456</string>
    <string name="energo_phone_code_error">Invalid verification code</string>
    <string name="energo_phone_code_time_count_down" translatable="false">%1$ds</string>
    <string name="energo_login_sign_in">Sign In</string>
    <string name="energo_login_sign_up">Sign Up</string>
    <string name="energo_login_phone_header">Phone</string>
    <string name="energo_login_phone_hint">Your phone number</string>
    <string name="energo_login_password_header">Password</string>
    <string name="energo_login_password_hint">Your expected password</string>
    <string name="energo_login_password_repeat_hint">Input password again</string>
    <string name="energo_login_forgot_password">Forgot Password</string>
    <string name="energo_login_error">Invalid username or password</string>
    <string name="energo_phone_error">Invalid phone number</string>
    <string name="energo_password_error">Invalid password</string>
    <string name="energo_passwords_dont_match_error">Passwords don\'t match</string>
    <string name="energo_forgot_password_password_header">New Password</string>
    <string name="energo_forgot_password_password_hint">Your expected new password</string>
    <string name="energo_forgot_password_password_repeat_hint">Input new password again</string>
    <string name="energo_forgot_password_submit">Submit</string>
    <string name="energo_settings_title">Settings</string>
    <string name="energo_settings_my_account">My Account</string>
    <string name="energo_settings_profile">Profile</string>
    <string name="energo_settings_profile_not_verified">Not Verified</string>
    <string name="energo_settings_profile_verified">Verified</string>
    <string name="energo_settings_contact">Contact</string>
    <string name="energo_settings_app_settings">App Settings</string>
    <string name="energo_settings_enable_push">Enable Push</string>
    <string name="energo_settings_security">Security</string>
    <string name="energo_settings_password">Password</string>
    <string name="energo_settings_payment_password">Payment Password</string>
    <string name="energo_settings_phone">Phone</string>
    <string name="energo_settings_help">Help</string>
    <string name="energo_settings_legal">Legal</string>
    <string name="energo_settings_update">Update</string>
    <string name="energo_settings_logout">Logout</string>
    <string name="energo_wallet_title">Wallet</string>
    <string name="energo_wallet_date">Date</string>
    <string name="energo_wallet_currency_header">Balance</string>
    <string name="energo_wallet_currency_symbol">BAHT</string>
    <string name="energo_wallet_currency_recharge">Recharge</string>
    <string name="energo_wallet_currency_withdraw">Withdraw</string>
    <string name="energo_wallet_transaction_value_format" translatable="false">%1$s%2$.2f %3$s</string>
    <string name="energo_wallet_recharge_title">Recharge</string>
    <string name="energo_wallet_recharge_amount_hint">Amount to be recharged</string>
    <string name="energo_wallet_recharge_action">Recharge</string>
    <string name="energo_wallet_recharge_error_title">Oops</string>
    <string name="energo_wallet_recharge_error_invalid_amount">Need to specify a valid recharge amount</string>
    <string name="energo_wallet_recharge_error_message">Something went wrong, try again later</string>
    <string name="energo_wallet_recharge_error_try_again">Try Again</string>
    <string name="energo_wallet_recharge_success_title">Success</string>
    <string name="energo_wallet_recharge_success_message">Successfully recharged %1$.2f %2$s</string>
    <string name="energo_wallet_recharge_success_continue_recharge">Continue to Recharge</string>
    <string name="energo_wallet_recharge_success_return">Return</string>
    <string name="energo_wallet_withdraw_title">Withdraw</string>
    <string name="energo_wallet_withdraw_account_header">Account</string>
    <string name="energo_wallet_withdraw_account_hint">Account to receive the withdraw</string>
    <string name="energo_wallet_withdraw_amount_hint">Amount to be withdraw</string>
    <string name="energo_wallet_withdraw_action">Withdraw</string>
    <string name="energo_wallet_withdraw_error_title">Error</string>
    <string name="energo_wallet_withdraw_error_message">System Timeout</string>
    <string name="energo_wallet_withdraw_error_try_again">Try Again</string>
    <string name="energo_wallet_withdraw_ongoing_title">Ongoing</string>
    <string name="energo_wallet_withdraw_ongoing_message">We will deposit within 1–3 days to the designer account</string>
    <string name="energo_wallet_withdraw_ongoing_return">Return</string>
    <string name="energo_wallet_withdraw_default_fee_description">-Fee 0.8%</string>
    <string name="energo_wallet_withdraw_alipay_fee">Cash will be withheld Alipay 0.6%% fee</string>
    <string name="energo_market_title">Market</string>
    <string name="energo_market_buy_title">Buy</string>
    <string name="energo_user_profile_avatar_label">Photo</string>
    <string name="energo_user_profile_name_label">Name</string>
    <string name="energo_user_profile_name_hint">Tap to set Name</string>
    <string name="energo_user_profile_gender_label">Gender</string>
    <string name="energo_user_profile_gender_unknown">Undefined</string>
    <string name="energo_user_profile_type_label">Type</string>
    <string name="energo_user_profile_type_family">Family</string>
    <string name="energo_user_profile_address_label">Address</string>
    <string name="energo_user_profile_address_unknown">Undefined</string>
    <string name="energo_smart_meter_binding_name">Name</string>
    <string name="energo_smart_meter_binding_name_hint">Give your smart meter a nice name</string>
    <string name="energo_smart_meter_binding_address">Address</string>
    <string name="energo_smart_meter_binding_address_hint">Please tell us the actual installation address</string>
    <string name="energo_smart_meter_binding_area_hint">Area</string>
    <string name="energo_smart_meter_binding_detail_address">Detail Address</string>
    <string name="energo_smart_meter_binding_detail_address_hint">At least 5 words</string>
    <string name="energo_smart_meter_binding_next">Next</string>
    <string name="energo_smart_meter_profile_name_label">Name</string>
    <string name="energo_smart_meter_profile_attach_to_label">Attach to</string>
    <string name="energo_smart_meter_profile_status_label">Status</string>
    <string name="energo_smart_meter_profile_access_time_label">Access time</string>
    <string name="energo_smart_meter_profile_model_label">Model</string>
    <string name="energo_smart_meter_profile_version_label">Version</string>
    <string name="energo_smart_meter_profile_uuid_label">UUID</string>
    <string name="energo_smart_meter_profile_default_value">Undefined</string>
    <string name="energo_user_validation_type_header">Select True Identity</string>
    <string name="energo_user_validation_type_sub_header">Don\'t worry, we\'ll never let the information go.</string>
    <string name="energo_user_validation_type_family">Family</string>
    <string name="energo_user_validation_type_business">Business</string>
    <string name="energo_user_validation_type_industry">Industry</string>
    <string name="energo_user_validation_type_disclaimer">Identity authentication means that you agree to <a href="http://www.baidu.com">The Terms of Service</a>, the final identity will affect your transaction processing rates, etc.</string>
    <string name="energo_user_validation_location_header">Address</string>
    <string name="energo_user_validation_location_sub_header">Please tell us the actual installation address</string>
    <string name="energo_user_validation_location_area_hint">Area</string>
    <string name="energo_user_validation_location_address_header">Detailed Address</string>
    <string name="energo_user_validation_location_address_sub_header">At least 5 words</string>
    <string name="energo_user_validation_location_address_hint">Street, Number, Room, etc.</string>
    <string name="energo_change_password_current_password_header">Enter your login password to verify your identity</string>
    <string name="energo_change_password_current_password_label">Password</string>
    <string name="energo_change_password_current_password_hint">Enter password</string>
    <string name="energo_change_password_new_password_header">Enter your new password</string>
    <string name="energo_change_password_new_password_label">New Password</string>
    <string name="energo_change_password_new_password_hint">Enter New password</string>
    <string name="energo_change_password_new_password_repeat_label">Input Again</string>
    <string name="energo_change_password_new_password_repeat_hint">Enter again to confirm</string>
    <string name="energo_change_password_submit">Submit</string>
</resources>