<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/energo_change_password_header"
        android:text="@string/energo_change_password_current_password_header" />

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/energo_change_password_field">

        <TextView
            style="@style/energo_change_password_label"
            android:labelFor="@+id/et_password"
            android:text="@string/energo_change_password_current_password_label" />

        <EditText
            android:id="@+id/et_password"
            style="@style/energo_change_password_input"
            android:hint="@string/energo_change_password_current_password_hint" />

    </LinearLayout>

    <TextView
        style="@style/energo_change_password_header"
        android:text="@string/energo_change_password_new_password_header" />

    <LinearLayout
        android:id="@+id/ll_new_password"
        style="@style/energo_change_password_field">

        <TextView
            style="@style/energo_change_password_label"
            android:labelFor="@+id/et_new_password"
            android:text="@string/energo_change_password_new_password_label" />

        <EditText
            android:id="@+id/et_new_password"
            style="@style/energo_change_password_input"
            android:hint="@string/energo_change_password_new_password_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_password_repeat"
        style="@style/energo_change_password_field">

        <TextView
            style="@style/energo_change_password_label"
            android:labelFor="@+id/et_new_password_repeat"
            android:text="@string/energo_change_password_new_password_repeat_label" />

        <EditText
            android:id="@+id/et_new_password_repeat"
            style="@style/energo_change_password_input"
            android:hint="@string/energo_change_password_new_password_repeat_hint" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/energo_primary_filled_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/energo_small_spacing"
        android:layout_marginTop="@dimen/energo_double_large_spacing"
        android:text="@string/energo_change_password_submit" />

</LinearLayout>